--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elasticsearch Spec Viewer</title>
+    <script type="module" crossorigin src="/elasticsearch-spec-viewer/assets/index.71254386.js"></script>
+    <link rel="stylesheet" href="/elasticsearch-spec-viewer/assets/index.862610e8.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    
   </body>
 </html>
